--- a/index3.html
+++ b/index3.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Re-Read</title>
-    <link rel="stylesheet" href="./CSS file/style01.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders:opsz,wght@10..72,100..900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">Re-Read</header>
@@ -16,34 +16,34 @@
         </section>
         <div class="seccion2">
             <nav class="menu">
-                <a href="./index.html">Re-Read</a>
-                <a href="./indexx.html">Libros</a>
-                <a href="./indexxx.html" class="active">eBooks</a>
+                <a href="./index1.html">Re-Read</a>
+                <a href="./index2.html">Libros</a>
+                <a href="./index3.html" class="active">eBooks</a>
             </nav>
             <section class="content">
                 <h2>Toda la actualidad en eBook</h2>
                 <div class="ebooks">
                     <div class="row">
                         <div class="ebook-item">
-                            <img src="./imagenes/cell.jpeg" alt="Cell - Stephen King">
+                            <img src="./img/cell.jpeg" alt="Cell - Stephen King">
                             <p>Cell - Stephen King</p>
                         </div>
                         <div class="ebook-item">
-                            <img src="./imagenes/elciclodelhombrelobo.jpeg" alt="El ciclo del hombre lobo - Stephen King">
+                            <img src="./img/elciclodelhombrelobo.jpeg" alt="El ciclo del hombre lobo - Stephen King">
                             <p>El ciclo del hombre lobo - Stephen King</p>
                         </div>
                         <div class="ebook-item">
-                            <img src="./imagenes/elresplandor.jpeg" alt="El resplandor - Stephen King">
+                            <img src="./img/elresplandor.jpeg" alt="El resplandor - Stephen King">
                             <p>El resplandor - Stephen King</p>
                         </div>
                     </div>
                     <div class="row">
                         <div class="ebook-item">
-                            <img src="./imagenes/doctorsleep.jpeg" alt="Doctor Sueño - Stephen King">
+                            <img src="./img/doctorsleep.jpeg" alt="Doctor Sueño - Stephen King">
                             <p>Doctor Sueño - Stephen King</p>
                         </div>
                         <div class="ebook-item">
-                            <img src="./imagenes/mientrasescribo.jpeg" alt="Mentiras Escritas - Stephen King">
+                            <img src="./img/mientrasescribo.jpeg" alt="Mentiras Escritas - Stephen King">
                             <p>Mentiras Escritas - Stephen King</p>
                         </div>
                     </div>
