--- a/index1.html
+++ b/index1.html
@@ -24,7 +24,7 @@
                 <h2>Nunca la lectura ha sido tan necesaria</h2>
                 <p>En estos tiempos difíciles Re-Read se suma al mensaje de #yomequedoencasa por el bien común de la sociedad.</p>
                 <h2>Reduce & Reuse & Read</h2>
-                <p>Somos la librería Eco-Friendly – Re-Read nació pensando en verde con el objetivo de compartir una pasión, la lectura y para expresar una preocupación: si queremos construir un futuro sostenible, es necesario que reduzcamos el consumo y que reutilicemos cuantos más objetos materiales mejor.</p>
+                <p>Somos la librería Eco-Friendly - Re-Read nació pensando en verde con el objetivo de compartir una pasión, la lectura y para expresar una preocupación: si queremos construir un futuro sostenible, es necesario que reduzcamos el consumo y que reutilicemos cuantos más objetos materiales mejor.</p>
             </section>
         </div>
     </main>
