--- a/index2.html
+++ b/index2.html
@@ -15,7 +15,7 @@
     </div>
     <div class="seccion2">
         <nav class="menu">
-            <a href="./index1.html">Re-Read</a>
+            <a href="./index.html">Re-Read</a>
             <a href="./index2.html" class="active">Libros</a>
             <a href="./index3.html">eBooks</a>
         </nav>
