--- a/index3.html
+++ b/index3.html
@@ -16,7 +16,7 @@
         </section>
         <div class="seccion2">
             <nav class="menu">
-                <a href="./index1.html">Re-Read</a>
+                <a href="./index.html">Re-Read</a>
                 <a href="./index2.html">Libros</a>
                 <a href="./index3.html" class="active">eBooks</a>
             </nav>
