--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </section>
         <div class="seccion2">
             <nav class="menu">
-                <a href="./index1.html" class="active">Re-Read</a>
+                <a href="./index.html" class="active">Re-Read</a>
                 <a href="./index2.html">Libros</a>
                 <a href="./index3.html">eBooks</a>
             </nav>
